# Machi_Koro_AI

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  开发文档.md
src/: CMakeLists.txt  card.cpp  card.h  cardfactory.cpp  cardfactory.h  cardslots.cpp  cardslots.h  cardstore.cpp  cardstore.h  commandfactory.cpp  commandfactory.h  dice.cpp  dice.h  game.cpp  game.h  gamecommand.cpp  gamecommand.h  gamecontroller.cpp  gamecontroller.h  gamestate.cpp  gamestate.h  global.h  parallelcommandgroup.cpp  parallelcommandgroup.h  player.cpp  player.h  randomutils.cpp  randomutils.h
src/ai/: ai.cpp  ai.h
src/cards/: card.cpp  card.h  flowerorchard.cpp  flowerorchard.h  forest.cpp  forest.h  mackerelboat.cpp  mackerelboat.h  ranch.cpp  ranch.h  wheatfield.cpp  wheatfield.h
src/cards/blue/: appleorchard.cpp  appleorchard.h  flowerorchard.cpp  flowerorchard.h  forest.cpp  forest.h  mackerelboat.cpp  mackerelboat.h  ranch.cpp  ranch.h  tunaboat.cpp  tunaboat.h  wheatfield.cpp  wheatfield.h
src/cards/green/: bakery.cpp  bakery.h  cheesefactory.cpp  cheesefactory.h  demolitioncompany.cpp  demolitioncompany.h  flowershop.cpp  flowershop.h  fruitandvegetablemarket.cpp  fruitandvegetablemarket.h  furniturefactory.cpp  furniturefactory.h  generalstore.cpp  generalstore.h  movingcompany.cpp  movingcompany.h  sodabottlingplant.cpp  sodabottlingplant.h
src/cards/landmark/: airport.cpp  airport.h  amusementpark.cpp  amusementpark.h  harbor.cpp  harbor.h  radiotower.cpp  radiotower.h  shoppingmall.cpp  shoppingmall.h  station.cpp  station.h  trainstation.cpp  trainstation.h
src/cards/purple/: businesscenter.cpp  businesscenter.h  publisher.cpp  publisher.h  stadium.cpp  stadium.h  taxoffice.cpp  taxoffice.h  techstartup.cpp  techstartup.h
src/cards/red/: cafe.cpp  cafe.h  familyrestaurant.cpp  familyrestaurant.h  frenchrestaurant.cpp  frenchrestaurant.h  membersonlyclub.cpp  membersonlyclub.h  pizzajoint.cpp  pizzajoint.h  sushibar.cpp  sushibar.h
src/commands/: gaincoinscombonamecommand.cpp  gaincoinscombonamecommand.h  gaincoinscombotypecommand.cpp  gaincoinscombotypecommand.h  gaincoinscommand.cpp  gaincoinscommand.h  gamecommand.cpp  gamecommand.h  rolldicecommand.cpp  rolldicecommand.h  startturncommand.cpp  startturncommand.h
src/commands/bluegreen/: closelandmarkcommand.cpp  closelandmarkcommand.h  gaincoinscombonamecommand.h  gaincoinscombotypecommand.cpp  gaincoinscombotypecommand.h  gaincoinscommand.cpp  gaincoinscommand.h  gaincoinswithdicescommand.cpp  gaincoinswithdicescommand.h  givecardcommand.cpp  givecardcommand.h
src/commands/core/: activatecardcommand.cpp  activatecardcommand.h  activatecardscommand.cpp  activatecardscommand.h  buycardcommand.cpp  buycardcommand.h  checkgameendcommand.cpp  checkgameendcommand.h  gainonecoinifnocoincommand.cpp  gainonecoinifnocoincommand.h  gainonecoinifnocoinscommand.cpp  gainonecoinifnocoinscommand.h  initgamecommand.cpp  initgamecommand.h  rolldicecommand.cpp  rolldicecommand.h  startturncommand.cpp  startturncommand.h
src/commands/landmark/: adddicenum.cpp  adddicenum.h  adddicenumcommand.cpp  adddicenumcommand.h  gaincoinsifnobuycardcommand.cpp  gaincoinsifnobuycardcommand.h  gaincoinsifnobuycommand.cpp  gaincoinsifnobuycommand.h  gaincoinswithnobuycardcommand.cpp  gaincoinswithnobuycardcommand.h  gainnewturncommand.cpp  gainnewturncommand.h  rerolldicecommand.cpp  rerolldicecommand.h
src/commands/purple/: investtechnologycompanycommand.cpp  investtechnologycompanycommand.h  stealcoinscomboredstorecommand.cpp  stealcoinscomboredstorecommand.h  stealcoinsfromallcommand.cpp  stealcoinsfromallcommand.h  stealcoinshalffromwealthycommand.cpp  stealcoinshalffromwealthycommand.h  swapcardcommand.cpp  swapcardcommand.h
src/commands/red/: stealcoinscommand.cpp  stealcoinscommand.h
src/factorys/: cardfactory.h  commandfactory.cpp  commandfactory.h
src/ui/: MyRoundedVideoItem.h  buttonareawidget.cpp  buttonareawidget.h  buttonwidget.cpp  buttonwidget.h  cardstoreareawidget.cpp  cardstoreareawidget.h  cardstorewidget.cpp  cardstorewidget.h  cardwidget.cpp  cardwidget.h  citysilhouettepainter.cpp  citysilhouettepainter.h  coinswidget.cpp  coinswidget.h  diceareawidget.cpp  diceareawidget.h  dicewidget.cpp  dicewidget.h  gamebackgroundwidget.cpp  gamebackgroundwidget.h  logviewerwidget.cpp  logviewerwidget.h  playerareawidget.cpp  playerareawidget.h  playerphotowidget.cpp  playerphotowidget.h  roundedvideoclipeffect.cpp  roundedvideoclipeffect.h  roundedvideoitem.h  skypainter.cpp  skypainter.h  slotwidget.cpp  slotwidget.h  test.cpp  test.h
src/ui/background/: citysilhouettepainter.cpp  gamebackgroundwidget.cpp  gamebackgroundwidget.h  skypainter.cpp
src/ui/cards/: cardstoreareawidget.cpp  cardstoreareawidget.h  cardwidget.cpp  slotwidget.cpp  slotwidget.h
src/ui/coins/: coinchangewidget.cpp  coinchangewidget.h  coinswidget.cpp
src/ui/dices/: diceareawidget.cpp
src/ui/players/: playerareawidget.cpp  playerphotowidget.cpp  playerphotowidget.h  roundedvideoitem.cpp
src/ui/prompt/: promptbuycardanimationhandler.cpp  promptbuycardanimationhandler.h  promptcardinanimationhandler.cpp  promptcardinanimationhandler.h  promptcardoutanimationhandler.cpp  promptcardoutanimationhandler.h  promptdiceanimationhandler.cpp  promptdiceanimationhandler.h  prompthandlerbase.cpp  prompthandlerbase.h  promptloadinganimationhandler.cpp  promptloadinganimationhandler.h  promptpopuphandler.cpp  promptpopuphandler.h  promptselectcardhandler.cpp  promptselectcardhandler.h  promptselectdicehandler.cpp  promptselectdicehandler.h  promptselectplayerhandler.cpp  promptselectplayerhandler.h  promptstartturnanimationhandler.cpp  promptstartturnanimationhandler.h
src/utils/: adaptivelayoutwidget.cpp  adaptivelayoutwidget.h  aspectratiowidget.cpp  aspectratiowidget.h  autofittextlabel.cpp  autofittextlabel.h  logutils.cpp  logutils.h  randomutils.h
